--- a/.github/workflows/generator-linux.yml
+++ b/.github/workflows/generator-linux.yml
@@ -451,7 +451,8 @@ jobs:
             # output devs
             ls -l ./
             tree -L 3 /opt/artifacts/vcpkg/installed
-             run: # disable git safe.directory
+          run: |
+            # disable git safe.directory
             git config --global --add safe.directory "*"
             # rust
             pushd /opt
